--- a/views/layout.jade
+++ b/views/layout.jade
@@ -14,5 +14,5 @@ html
     div.container
       block content
     block footer
-    script(src='js/jquery.slim.min.js')
+    script(src='js/jquery.min.js')
     script(src='js/bootstrap.min.js')
