--- a/views/login.jade
+++ b/views/login.jade
@@ -8,11 +8,11 @@ block header
 
 block content
   form(action="/login", method="post")
-    div
-      label Name (Firstname Lastname)
-      input(type="text", name="username")
-    div
-      label Password (4 words)
-      input(type="password" name="password")
+    div.row
+      label.col-sm-4 Name (Firstname Lastname)
+      input.col-sm-8(type="text", name="username")
+    div.row
+      label.col-sm-4 Password (4 words)
+      input.col-sm-8(type="password" name="password")
     div
       input(type="submit" value="Log In")
