5-star rating view

--- a/views/index.jade
+++ b/views/index.jade
@@ -9,12 +9,17 @@ mixin vote-buttons(rushee_id, net_votes)
   button(onclick="vote(#{rushee_id}, 'down')").vote-button-down
 
 mixin rating(rushee_id, rating)
-  div.rating
-    span ☆
-    span ☆
-    span ☆
-    span ☆
-    span ☆
+  fieldset.rating
+    input(type="radio" id="rating-input-#{rushee_id}-5" name="rating-#{rushee_id}" value="5")
+    label(for="rating-input-#{rushee_id}-5")
+    input(type="radio" id="rating-input-#{rushee_id}-4" name="rating-#{rushee_id}" value="4")
+    label(for="rating-input-#{rushee_id}-4")
+    input(type="radio" id="rating-input-#{rushee_id}-3" name="rating-#{rushee_id}" value="3")
+    label(for="rating-input-#{rushee_id}-3")
+    input(type="radio" id="rating-input-#{rushee_id}-2" name="rating-#{rushee_id}" value="2")
+    label(for="rating-input-#{rushee_id}-2")
+    input(type="radio" id="rating-input-#{rushee_id}-1" name="rating-#{rushee_id}" value="1")
+    label(for="rating-input-#{rushee_id}-1")
 
 
 mixin rush-attendance(attendance_array)
@@ -28,17 +33,19 @@ mixin rushee(data)
       img.rushee-picture.col-md-2(src=data.profile_picture)
       div.rushee-info.col-md-10.row
         div.rushee-stats.col-md-4
-          h2 #{data.name}
+          h2.rushee-name #{data.name}
           +rating(data.id, data.avg_rating)
-          p #{data.year}
-          p #{data.dorm}
+          span.rushee-year #{data.year}.
+          span.rushee-dorm #{data.dorm}
         div.rushee-summary.col-md-8 #{data.summary}
 
 block header
   h1.title Rushee List
 
 block content
-  script(src='js/index.js')
+  script.
+    var rushees = !{JSON.stringify(rushees)};
   ol.rushee-list
     each rushee in rushees
       +rushee(rushee)
+  script(src='js/index.js')
