--- a/views/scss/master.scss
+++ b/views/scss/master.scss
@@ -4,7 +4,10 @@ body {
 }
 
 $hunter-green: #0a760a;
-$cardinal-red: #c41e3a;
+$cardinal-red: #d01131;
+$cardinal-red-60: #f0425f;
+
+$primary-text-color: #111;
 
 .card {
   background: #fff;
@@ -34,66 +37,77 @@ $cardinal-red: #c41e3a;
 
   .rushee-entry {
     margin: 0.5rem 0;
-    padding: 1rem;
     width: 100%;
+
+    color: $primary-text-color;
+
+    .rushee-picture {
+      padding: 0;
+    }
+
+    .rushee-info {
+      padding: 1rem;
+      margin: 0;
+
+      .rushee-name {
+        text-align: center;
+      }
+
+      .rushee-year {
+        float: left;
+      }
+
+      .rushee-dorm {
+        float: right;
+      }
+    }
   }
-}
-
-.vote-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  height: 100%;
-  padding: 0;
-}
-
-.vote-count {
-  text-align: center;
-  width: 100%;
-  margin: 0;
-}
-
-// Reset button styling
-[class^=vote-button] {
-  width: 0;
-  height: 0;
-  margin: 0 auto;
-  padding: 0;
-  background: none;
-  outline: 0;
-  border: 0;
-}
-
-.vote-button-up {
-  border-left: 1rem solid transparent;
-  border-right: 1rem solid transparent;
-  border-bottom: 1rem solid $hunter-green;
-}
-
-.vote-button-down {
-  width: 0;
-  height: 0;
-  margin: 0 auto;
-  border-left: 1rem solid transparent;
-  border-right: 1rem solid transparent;
-  border-top: 1rem solid $cardinal-red;
 }
 
 // Star rating
 .rating {
-  unicode-bidi: bidi-override;
-  direction: rtl;
+  display: block;
+  float:left;
+  width: 100%;
 
-  > span {
-  display: inline-block;
-  position: relative;
-  width: 20%;
-  text-align: center;
-
-    &:hover:before,
-    &:hover ~ span:before {
-      content: "\2605";
-      position: absolute;
-    }
+  > input {
+    display: none
   }
+
+  > label {
+    text-align: center;
+    float:right;
+    width: 20%;
+    padding:0;
+    cursor: pointer;
+    color: #ddd;
+    font-size: 160%;
+  }
+}
+
+.rating:not(:checked) > label:before {
+  content: '★';
+}
+
+.rating > input:checked ~ label {
+  color: $cardinal-red;
+}
+
+.rating:not(:checked) > label:hover,
+.rating:not(:checked) > label:hover ~ label {
+  color: $cardinal-red-60;
+}
+
+.rating > input:checked + label:hover,
+.rating > input:checked + label:hover ~ label,
+.rating > input:checked ~ label:hover,
+.rating > input:checked ~ label:hover ~ label,
+.rating > label:hover ~ input:checked ~ label {
+  color: $cardinal-red-60;
+}
+
+.rating > label:active {
+  position:relative;
+  top:2px;
+  left:2px;
 }
