add rushee detail page

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,13 +7,13 @@ html
     block title
       title Phi Psi Rush Portal
     meta(name='description', content='Phi Psi\'s Rush Book')
-    link(rel='stylesheet', href='css/bootstrap.min.css')
-    link(rel='stylesheet', href='css/master.css')
+    link(rel='stylesheet', href='/css/bootstrap.min.css')
+    link(rel='stylesheet', href='/css/master.css')
   body
     block header
     div.container
       block content
     block footer
-    script(src='js/jquery.min.js')
-    script(src='js/bootstrap.min.js')
+    script(src='/js/jquery.min.js')
+    script(src='/js/bootstrap.min.js')
     block scripts
