--- a/views/login.jade
+++ b/views/login.jade
@@ -4,7 +4,7 @@ block title
   title Login - Phi Psi Rush Portal
 
 block header
-  h1.title Phi Psi Rush Portal Login
+  h1#title.card-shadow Phi Psi Rush Portal Login
 
 block content
   form(action="/login", method="post")
