--- a/views/scss/master.scss
+++ b/views/scss/master.scss
@@ -1,13 +1,12 @@
-body {
-  background: #fff;
-
-}
-
 $hunter-green: #0a760a;
 $cardinal-red: #d01131;
 $cardinal-red-60: #f0425f;
 
 $primary-text-color: #111;
+
+.card-shadow {
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
 
 .card {
   background: #fff;
@@ -15,14 +14,14 @@ $primary-text-color: #111;
   display: block;
   float: left;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  transition: all 0.2s ease-in-out;
+  transition: box-shadow 0.2s ease-in-out;
 
   &:hover {
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   }
 }
 
-.title {
+#title {
   width: 100%;
   text-align: center;
   background: $hunter-green;
@@ -30,44 +29,10 @@ $primary-text-color: #111;
   padding: 2rem;
 }
 
-.rushee-list {
-  list-style-type: none;
-  margin: 0;
-  padding: 1rem 0;
-
-  .rushee-entry {
-    margin: 0.5rem 0;
-    width: 100%;
-
-    color: $primary-text-color;
-
-    .rushee-picture {
-      padding: 0;
-    }
-
-    .rushee-info {
-      padding: 1rem;
-      margin: 0;
-
-      .rushee-name {
-        text-align: center;
-      }
-
-      .rushee-year {
-        float: left;
-      }
-
-      .rushee-dorm {
-        float: right;
-      }
-    }
-  }
-}
-
 // Star rating
 .rating {
   display: block;
-  float:left;
+  float: left;
   width: 100%;
 
   > input {
@@ -76,9 +41,9 @@ $primary-text-color: #111;
 
   > label {
     text-align: center;
-    float:right;
+    float: right;
     width: 20%;
-    padding:0;
+    padding: 0;
     cursor: pointer;
     color: #ddd;
     font-size: 160%;
@@ -105,3 +70,6 @@ $primary-text-color: #111;
 .rating > label:hover ~ input:checked ~ label {
   color: $cardinal-red-60;
 }
+
+@import 'index';
+@import 'rushee';
