--- a/views/index.jade
+++ b/views/index.jade
@@ -7,7 +7,7 @@ mixin character-trait()
 
 mixin rushee(data)
   a(href="/rushee/#{data.id}")
-    li.rushee-entry.card.row
+    li.rushee-entry.card-hover.row
       img.rushee-picture.col-md-2(src=data.profile_picture)
       div.rushee-info.col-md-10.row
         div.rushee-stats.col-md-4
