--- a/views/scss/master.scss
+++ b/views/scss/master.scss
@@ -1,6 +1,7 @@
 $hunter-green: #0a760a;
 $cardinal-red: #d01131;
 $cardinal-red-60: #f0425f;
+$inactive-color: #ddd;
 
 $primary-text-color: #111;
 
@@ -9,10 +10,13 @@ $primary-text-color: #111;
 }
 
 .card {
-  background: #fff;
-  border-radius: 2px;
-  display: block;
-  float: left;
+  @extend .card-shadow;
+  border: 0;
+  border-radius: 0.2rem;
+}
+
+.card-hover {
+  @extend .card;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   transition: box-shadow 0.2s ease-in-out;
 
@@ -45,7 +49,7 @@ $primary-text-color: #111;
     width: 20%;
     padding: 0;
     cursor: pointer;
-    color: #ddd;
+    color: $inactive-color;
     font-size: 160%;
   }
 }
@@ -69,6 +73,71 @@ $primary-text-color: #111;
 .rating > input:checked ~ label:hover ~ label,
 .rating > label:hover ~ input:checked ~ label {
   color: $cardinal-red-60;
+}
+
+// Traits
+.trait {
+  display: inline-block;
+  font-size: 110%;
+
+  span {
+    display: inline-block;
+  }
+
+  > .num-endorsements {
+    background-color: $cardinal-red;
+    border-radius: 0.2rem 0 0 0.2rem;
+    color: white;
+    width: 2.5rem;
+    padding: 0.5rem;
+    text-align: center;
+  }
+
+  > .trait-name {
+    display: inline-block;
+    padding: 0.5rem 1.5rem;
+  }
+}
+
+.trait-full > .name-box {
+  background-color: $cardinal-red;
+  color: white;
+  float: right;
+  display: inline-block;
+  padding: 0.5rem;
+  font-size: 110%;
+  margin: 0 0.1rem;
+}
+
+.trait-vote {
+  float: left;
+  display: inline-block;
+
+  > input {
+    display: none;
+  }
+
+  > label {
+    color: $inactive-color;
+    cursor: pointer;
+    text-align: center;
+    font-size: 110%;
+    padding: 0.5rem 0;
+    margin: 0;
+    margin-right: 0.5rem;
+  }
+}
+
+.trait-vote > label:before {
+  content: '➕';
+}
+
+.trait-vote:hover > input:checked ~ label:before, {
+  content: '➖';
+}
+
+.trait-vote > input:checked ~ label {
+  color: $cardinal-red;
 }
 
 @import 'index';
