fix trait bug, display top traits on index

--- a/views/index.jade
+++ b/views/index.jade
@@ -13,6 +13,10 @@ mixin rushee(data)
         div.rushee-stats.col-md-4
           h2.rushee-name #{data.name}
           +rating(data.id, data.avg_rating)
+          div.top-traits-container.row
+            each trait, idx in data.topTraits
+              - if (idx < 2)
+                +trait(trait).col-md-12.col-lg-6
           span.rushee-year #{data.year}.
           span.rushee-dorm #{data.dorm}
         div.rushee-summary.col-md-8 #{data.summary}
