--- a/views/index.jade
+++ b/views/index.jade
@@ -10,7 +10,7 @@ mixin rushee(data)
     li.rushee-entry.card-hover.row
       img.rushee-picture.col-md-2(src=data.profile_picture)
       div.rushee-info.col-md-10.row
-        div.rushee-stats.col-md-4
+        div.rushee-stats.col-md-4.clearfix
           h2.rushee-name #{data.name}
           +rating(data.id, data.avg_rating)
           div.top-traits-container.row
@@ -19,7 +19,8 @@ mixin rushee(data)
                 +trait(trait).col-md-12.col-lg-6
           span.rushee-year #{data.year}.
           span.rushee-dorm #{data.dorm}
-        div.rushee-summary.col-md-8 #{data.summary}
+        div.rushee-summary.col-md-8
+          p #{data.summary}
 
 block header
   h1#title.card-shadow Rushee List
