show avg & user ratings in the same set of stars

--- a/views/_mixins.jade
+++ b/views/_mixins.jade
@@ -1,22 +1,17 @@
 //- 5-star rating
 mixin rating(rushee_id, rating)
-  fieldset.rating
-    input(type="radio" id="rating-input-#{rushee_id}-5" name="rating-#{rushee_id}" value="5")
-    label(for="rating-input-#{rushee_id}-5")
-    input(type="radio" id="rating-input-#{rushee_id}-4" name="rating-#{rushee_id}" value="4")
-    label(for="rating-input-#{rushee_id}-4")
-    input(type="radio" id="rating-input-#{rushee_id}-3" name="rating-#{rushee_id}" value="3")
-    label(for="rating-input-#{rushee_id}-3")
-    input(type="radio" id="rating-input-#{rushee_id}-2" name="rating-#{rushee_id}" value="2")
-    label(for="rating-input-#{rushee_id}-2")
-    input(type="radio" id="rating-input-#{rushee_id}-1" name="rating-#{rushee_id}" value="1")
-    label(for="rating-input-#{rushee_id}-1")
+  div.rating
+    span(id="rating-input-#{rushee_id}-1") ★
+    span(id="rating-input-#{rushee_id}-2") ★
+    span(id="rating-input-#{rushee_id}-3") ★
+    span(id="rating-input-#{rushee_id}-4") ★
+    span(id="rating-input-#{rushee_id}-5") ★
 
 //- Traits
 mixin trait-vote(trait_full)
   span.trait-vote
-      input(type="checkbox" id="trait-vote-#{trait_full.trait_name}" checked="#{trait_full.voted}")
-      label(for="trait-vote-#{trait_full.trait_name}")
+    input(type="checkbox" id="trait-vote-#{trait_full.trait_name}" checked="#{trait_full.voted}")
+    label(for="trait-vote-#{trait_full.trait_name}")
 
 mixin trait(trait)
   span.trait.card
