--- a/views/scss/master.scss
+++ b/views/scss/master.scss
@@ -33,47 +33,121 @@ $primary-text-color: #111;
   padding: 2rem;
 }
 
+// Input box styling
+textarea {
+  overflow: auto;
+  resize: none;
+  max-height: 20rem;
+  word-wrap: break-all;
+}
+
+textarea, input[type=text] {
+  // border: none;
+  border-width: 0 0 0 0.2rem;
+  padding-left: 0.5rem;
+  outline: none;
+
+  &:active, &:hover, &:focus {
+    border-color: $cardinal-red;
+  }
+}
+
 // Star rating
 .rating {
-  display: block;
-  float: left;
   width: 100%;
+  height: 1rem;
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  margin-bottom: 1rem;
 
-  > input {
-    display: none
-  }
-
-  > label {
-    text-align: center;
-    float: right;
+  > span {
     width: 20%;
+    text-align: center;
     padding: 0;
     cursor: pointer;
     color: $inactive-color;
-    font-size: 160%;
+    position: relative;
+    z-index: 1;
+
+    &[active], &[active] ~ span, &[checked]:before {
+      color: $cardinal-red;
+    }
+
+    &[checked]:before {
+      top: -50%; left: 0;
+      text-align: center;
+      position: absolute;
+      content: '★';
+      width: 100%;
+      padding: 0;
+      font-size: 200%;
+      z-index: -1;
+    }
   }
 }
 
-.rating:not(:checked) > label:before {
-  content: '★';
-}
+// .rating:not(:checked) > label:before {
+//   content: '★';
+// }
 
-.rating > input:checked ~ label {
-  color: $cardinal-red;
-}
+// .rating > input:checked ~ label {
+//   color: $cardinal-red;
+// }
 
-.rating:not(:checked) > label:hover,
-.rating:not(:checked) > label:hover ~ label {
-  color: $cardinal-red-60;
-}
+// .rating:not(:checked) > label:hover,
+// .rating:not(:checked) > label:hover ~ label {
+//   color: $cardinal-red-60;
+// }
 
-.rating > input:checked + label:hover,
-.rating > input:checked + label:hover ~ label,
-.rating > input:checked ~ label:hover,
-.rating > input:checked ~ label:hover ~ label,
-.rating > label:hover ~ input:checked ~ label {
-  color: $cardinal-red-60;
-}
+// .rating > input:checked + label:hover,
+// .rating > input:checked + label:hover ~ label,
+// .rating > input:checked ~ label:hover,
+// .rating > input:checked ~ label:hover ~ label,
+// .rating > label:hover ~ input:checked ~ label {
+//   color: $cardinal-red-60;
+// }
+
+// .rating {
+//   display: block;
+//   float: left;
+//   width: 100%;
+
+//   > input {
+//     display: none
+//   }
+
+//   > label {
+//     text-align: center;
+//     float: right;
+//     width: 20%;
+//     padding: 0;
+//     cursor: pointer;
+//     color: $inactive-color;
+//     font-size: 160%;
+//   }
+// }
+
+// .rating:not(:checked) > label:before {
+//   content: '★';
+// }
+
+// .rating > input:checked ~ label {
+//   color: $cardinal-red;
+// }
+
+// .rating:not(:checked) > label:hover,
+// .rating:not(:checked) > label:hover ~ label {
+//   color: $cardinal-red-60;
+// }
+
+// .rating > input:checked + label:hover,
+// .rating > input:checked + label:hover ~ label,
+// .rating > input:checked ~ label:hover,
+// .rating > input:checked ~ label:hover ~ label,
+// .rating > label:hover ~ input:checked ~ label {
+//   color: $cardinal-red-60;
+// }
 
 // Traits
 .trait {
