--- a/views/scss/_index.scss
+++ b/views/scss/_index.scss
@@ -55,6 +55,10 @@
         .rating {
           font-size: 125%;
         }
+
+        >.row {
+          margin-bottom: 0.5rem;
+        }
       }
 
       .rushee-summary > p {
