login styling, fix trait bug

--- a/views/login.jade
+++ b/views/login.jade
@@ -15,4 +15,4 @@ block content
       label.col-sm-4 Password (4 words)
       input.col-sm-8(type="password" name="password")
     div
-      input(type="submit" value="Log In")
+      input.card-hover(type="submit" value="Log In")
