--- a/views/scss/_index.scss
+++ b/views/scss/_index.scss
@@ -2,6 +2,18 @@
   margin-bottom: 2rem;
 }
 
+#rushee-filter {
+  display: block;
+  margin: 0 auto 1rem auto;
+  padding: 0.25rem 0.75rem;
+  width: 50%;
+  min-width: 25rem;
+
+  &:focus {
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  }
+}
+
 #rushee-list {
   counter-reset: li; /* Initiate a counter */
   margin: 0;
@@ -16,7 +28,13 @@
     list-style: none; /* Disable the normal item numbering */
     margin: 0.5rem 0;
     width: 100%;
-    color: $primary-text-color;
+
+    > a {
+      color: $primary-text-color;
+      width: 100%;
+      display: block;
+      margin: 0;
+    }
 
     // custom li number
     &:before {
