swap jquery webcam for webcamjs

--- a/views/register.jade
+++ b/views/register.jade
@@ -22,3 +22,7 @@ block content
     div#webcam
     div
       input.card-hover(type="submit" value="Register")
+
+block scripts
+  script(src="/js/webcam.min.js")
+  script(src="/js/register.js")
