--- a/views/register.jade
+++ b/views/register.jade
@@ -20,6 +20,7 @@ block content
       label Room number:
       input(type="text" name="room")
     div#webcam
+    button#capture-btn.card-hover(type="button" onclick="capture()") Take Photo
     div
       input.card-hover(type="submit" value="Register")
 
