add endpoint for creating rushees

--- a/views/register.jade
+++ b/views/register.jade
@@ -11,10 +11,10 @@ block content
     div
       label Year:
       select(name="year")
-        option(value="Freshman") Freshman
-        option(value="Sophomore") Sophomore
-        option(value="Junior") Junior
-        option(value="Senior") Senior - seriously?
+        option(value="Fr") Freshman
+        option(value="So") Sophomore
+        option(value="Jr") Junior
+        option(value="Sr") Senior - seriously?
       label Dorm:
       input(type="text" name="dorm")
       label Room number:
