fix bugs with multiple rushees

--- a/views/_mixins.jade
+++ b/views/_mixins.jade
@@ -1,6 +1,6 @@
 //- 5-star rating
 mixin rating(rushee_id, rating)
-  div.rating
+  div.rating(id="rating-#{rushee_id}")
     span(id="rating-input-#{rushee_id}-5") ★
     span(id="rating-input-#{rushee_id}-4") ★
     span(id="rating-input-#{rushee_id}-3") ★
