--- a/views/scss/_index.scss
+++ b/views/scss/_index.scss
@@ -28,6 +28,7 @@
     list-style: none; /* Disable the normal item numbering */
     margin: 0.5rem 0;
     width: 100%;
+    position: relative;
 
     > a {
       color: $primary-text-color;
