--- a/views/checkin.jade
+++ b/views/checkin.jade
@@ -7,9 +7,16 @@ block header
   h1#title.card-shadow Check In
 
 block content
-  h2 Return Check In
+  script var rusheeInfo = !{JSON.stringify(rusheeInfo)};
   div#returner-search.card-hover
-    input#returner-search-input(type="search" placeholder="Returning? Search for yourself here")
-    ul#returner-search-results
+    input#returner-search-input(type="search" placeholder="Returning? Look your name up here.")
+    ol#returner-search-results
+      each rushee in rusheeInfo
+        li(id="returner-entry-#{rushee.id}")
+          span.returner-name #{rushee.name}
+          span.returner-dorm #{rushee.dorm}
   button.card-hover(type="button")
   a.card-hover(href="/register") First time? Click here to register
+
+block scripts
+  script(src="/js/checkin.js")
