--- a/views/scss/master.scss
+++ b/views/scss/master.scss
@@ -20,7 +20,7 @@ $primary-text-color: #111;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   transition: box-shadow 0.2s ease-in-out;
 
-  &:hover, &:focus {
+  &:hover, &:focus, &:active {
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   }
 }
@@ -45,6 +45,7 @@ textarea, input[type=text], input[type=password] {
   border-width: 0 0 0 0.2rem;
   padding-left: 0.5rem;
   outline: none;
+  border-color: $inactive-color;
 
   &:active, &:hover, &:focus {
     border-color: $cardinal-red;
@@ -168,3 +169,4 @@ button, input[type=submit] {
 
 @import 'index';
 @import 'rushee';
+@import 'checkin';
