--- a/views/scss/_checkin.scss
+++ b/views/scss/_checkin.scss
@@ -7,7 +7,7 @@
   border: none;
   border-bottom: 0.1rem solid $inactive-color;
   font-size: 150%;
-  margin-bottom: 1rem;
+  margin-bottom: .5rem;
 
   &:active, &:focus {
     border-bottom-color: $cardinal-red;
@@ -20,17 +20,33 @@
   padding-bottom: 0.5rem;
   font-size: 125%;
 
-  > li {
+  li:hover {
+    background-color: $inactive-color;
+    cursor: pointer;
+  }
+
+  input[type="radio"] {
+    display: none;
+    &:checked ~  label {
+      background-color: $inactive-color;
+    }
+  }
+
+  label {
     display: block;
     padding: 0.5rem 1rem;
-
-    &:hover {
-      background-color: $inactive-color;
-      cursor: pointer;
-    }
   }
 
   .returner-dorm {
     float: right;
+  }
+}
+
+#checkin-btn:disabled {
+  cursor: default;
+  background-color: $inactive-color;
+
+  &:hover, &:focus, &:active {
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   }
 }
