--- a/views/index.jade
+++ b/views/index.jade
@@ -13,6 +13,7 @@ mixin rushee(data)
         div.rushee-stats.col-lg-4.col-md-6.clearfix
           h2.rushee-name #{data.name}
           +rating(data.id, data.avg_rating)
+          +rush-attendance(data.event_attendance)
           div.top-traits-container.row
             each trait, idx in data.top_traits
               - if (idx < 2)
