--- a/views/scss/master.scss
+++ b/views/scss/master.scss
@@ -65,7 +65,7 @@ button, input[type=submit] {
   display: flex;
   flex-direction: row-reverse;
   align-items: center;
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
 
   > span {
     width: 20%;
@@ -102,7 +102,7 @@ button, input[type=submit] {
 .trait {
   display: inline-block;
   font-size: 110%;
-  margin: 0.2rem;
+  margin: 0 0.2rem;
 
   span {
     display: inline-block;
@@ -165,6 +165,26 @@ button, input[type=submit] {
 
 .trait-vote > input:checked ~ label {
   color: $cardinal-red;
+}
+
+.rushee-attendance {
+  text-align: center;
+  margin-bottom: 0.5rem;
+
+  span {
+    display: inline-block;
+    width: calc(20% - 0.2rem);
+    margin: 0 0.1rem;
+    height: 0.5rem;
+  }
+
+  .attended-true {
+    background-color: $cardinal-red;
+  }
+
+  .attended-false {
+    background-color: $inactive-color;
+  }
 }
 
 @import 'index';
