finish register page

--- a/views/register.jade
+++ b/views/register.jade
@@ -1,12 +1,12 @@
 extends layout
 
 block header
-  h1#title.card-shadow Registration
+  h1#title.card-shadow Register
 
 block content
   form#register-form
     div.input-item
-      label Name:
+      label Full name:
       input#rushee-name.required(type="text", name="name")
     div.input-item
       label Year:
