disable name autocorrect

--- a/views/register.jade
+++ b/views/register.jade
@@ -7,7 +7,7 @@ block content
   form#register-form
     div.input-item
       label Full name:
-      input#rushee-name.required(type="text", name="name")
+      input#rushee-name.required(type="text", name="name" autocorrect="off" spellcheck="false")
     div.input-item
       label Year:
       select#rushee-year.required(name="year")
