remove jr and sr options

--- a/views/register.jade
+++ b/views/register.jade
@@ -13,8 +13,8 @@ block content
       select#rushee-year.required(name="year")
         option(value="Fr") Freshman
         option(value="So") Sophomore
-        option(value="Jr") Junior
-        option(value="Sr") Senior - seriously?
+        //- option(value="Jr") Junior
+        //- option(value="Sr") Senior - seriously?
     div.input-item
       label Dorm:
       input#rushee-dorm.required(type="text" name="dorm")
